fix: Update gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-display_name=SimpleJavaGui
+display_name=Simple Java Gui
 artifact_name=simple-java-gui
 artifact_id=gui
 artifact_group=io.github.intisy
