--- a/build.gradle
+++ b/build.gradle
@@ -2,64 +2,24 @@ plugins {
     id 'maven-publish'
     id 'com.github.johnrengelman.shadow' version '8.1.1'
     id 'org.openjfx.javafxplugin' version '0.0.13'
+    id 'io.github.intisy.online-gradle' version '1.3'
 }
 
-group = "${artifact_group}.${artifact_id}"
+version = project.hasProperty('artifact_version') ? project.property('artifact_version') : '1.0'
+group = artifact_group
 description = artifact_description
-version = project.hasProperty('version') ? project.version : '1.0'
-def main = "${group}.Main"
 
-repositories {
-    mavenLocal()
-    mavenCentral()
+ext {
+    main = "${group}.Main"
+    actor = "intisy"
 }
 
-shadowJar {
-    archiveFileName = "${artifact_name}-standalone.jar"
-    manifest {
-        attributes 'Main-Class': main
-    }
-}
-
-jar {
-    archiveFileName = "${artifact_name}.jar"
-    manifest {
-        attributes 'Main-Class': main
-    }
-}
-
-java {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
-}
-
-javafx {
-    version = '17.0.6'
-    modules = [
-            'javafx.controls',
-            'javafx.fxml',
-            'javafx.graphics',
-            'javafx.base',
-            'javafx.media',
-            'javafx.swing',
-            'javafx.web'
+online {
+    urls = [
+            'https://raw.githubusercontent.com/intisy/gradle-snippets/main/repositories.gradle',
+            'https://raw.githubusercontent.com/intisy/gradle-snippets/main/java.gradle',
+            'https://raw.githubusercontent.com/intisy/gradle-snippets/main/javafx.gradle',
+            'https://raw.githubusercontent.com/intisy/gradle-snippets/main/shadowJar.gradle',
+            'https://raw.githubusercontent.com/intisy/gradle-snippets/main/jar.gradle'
     ]
-}
-
-publishing {
-    repositories {
-        maven {
-            name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/intisy/simple-java-gui")
-            credentials {
-                username = System.getenv("GITHUB_ACTOR")
-                password = System.getenv("GITHUB_TOKEN")
-            }
-        }
-    }
-    publications {
-        gpr(MavenPublication) {
-            artifactId = artifact_name
-        }
-    }
 }
