--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,15 @@
 plugins {
-    id 'maven-publish'
-    id 'com.github.johnrengelman.shadow' version '8.1.1'
-    id 'org.openjfx.javafxplugin' version '0.0.13'
-    id 'io.github.intisy.online-gradle' version '1.3'
-}
-
-version = project.hasProperty('artifact_version') ? project.property('artifact_version') : '1.0'
-group = artifact_group
-description = artifact_description
-
-ext {
-    main = "${group}.Main"
-    actor = "intisy"
+    id "com.github.johnrengelman.shadow" version "8.1.1"
+    id "org.openjfx.javafxplugin" version "0.0.13"
+    id "io.github.intisy.online-gradle" version "1.4.2"
 }
 
 online {
+    presets = [
+            "https://raw.githubusercontent.com/intisy/gradle-snippets/main/default.preset",
+            "https://raw.githubusercontent.com/intisy/gradle-snippets/main/publish.preset"
+    ]
     urls = [
-            'https://raw.githubusercontent.com/intisy/gradle-snippets/main/repositories.gradle',
-            'https://raw.githubusercontent.com/intisy/gradle-snippets/main/java.gradle',
             'https://raw.githubusercontent.com/intisy/gradle-snippets/main/javafx.gradle',
-            'https://raw.githubusercontent.com/intisy/gradle-snippets/main/shadowJar.gradle',
-            'https://raw.githubusercontent.com/intisy/gradle-snippets/main/jar.gradle'
     ]
 }
