--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,4 @@ artifact_name=simple-java-gui
 artifact_id=gui
 artifact_group=io.github.intisy
 artifact_description=Api to easily create a good-looking java gui
+author=intisy
