--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,15 @@
 plugins {
     id "com.github.johnrengelman.shadow" version "8.1.1"
-    id "io.github.intisy.online-gradle" version "1.4.2"
+    id "io.github.intisy.online-gradle" version "1.4.3"
+    id "io.github.intisy.javacompile-gradle" version "1.1"
 }
 
 online {
     presets = [
             "https://raw.githubusercontent.com/intisy/gradle-snippets/main/default.preset",
             "https://raw.githubusercontent.com/intisy/gradle-snippets/main/publish.preset"
+    ]
+    urls = [
+            "https://raw.githubusercontent.com/intisy/gradle-snippets/main/javaCompile.gradle:1.8"
     ]
 }
