--- a/.github/workflows/sync-development-to-main.yml
+++ b/.github/workflows/sync-development-to-main.yml
@@ -1,9 +1,7 @@
 name: Sync Development to Main
 
 on:
-  push:
-    branches:
-      - development
+  workflow_call:
 
 permissions:
   contents: write
