--- a/.github/workflows/readme-dependency.yml
+++ b/.github/workflows/readme-dependency.yml
@@ -5,6 +5,10 @@ on:
 permissions:
   contents: write
 jobs:
+  call-sync-development-to-main:
+    uses: ./.github/workflows/sync-development-to-main.yml
+    secrets: inherit
+
   call-reusable-workflow:
     uses: intisy/workflows/.github/workflows/readme-dependency.yml@main
     with:
