Revert "Update sync-development-to-main.yml"
This reverts commit 342b0cdae330279da2158a80ec2cfde3bf0f8403.

--- a/.github/workflows/sync-development-to-main.yml
+++ b/.github/workflows/sync-development-to-main.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Merge Development into Main
         run: |
-          git merge --no-ff origin/development -m "Automated merge from development to main"
+          git merge --no-ff development -m "Automated merge from development to main"
 
       - name: Push Changes
         run: git push origin main
