Revert "Experimental workflows"
This reverts commit 557444d3c9c747a0292c5482b82ad55dda01d93f.

--- a/.github/workflows/sync-development-to-main.yml
+++ b/.github/workflows/sync-development-to-main.yml
@@ -1,7 +1,9 @@
 name: Sync Development to Main
 
 on:
-  workflow_call:
+  push:
+    branches:
+      - development
 
 permissions:
   contents: write
